--- a/villataika.fi/de/activities.html
+++ b/villataika.fi/de/activities.html
@@ -12,7 +12,7 @@
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
   <meta name="keywords" content="Bed and breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed and Breakfast Villa Taika : Asatische Eleganz Aktivitäten" />
+  <meta name="description" content="Bed and Breakfast Villa Taika : Asiatische Eleganz Aktivitäten" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="de"/>  
   <title>Bed &amp; Breakfast Villa Taika : Aktivitäten</title>
@@ -27,7 +27,7 @@
       <div class="centre">
         <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
       </div>
-      <div id="slogan">Asatische Eleganz</div>
+      <div id="slogan">Asiatische Eleganz</div>
   </div>
 
   <div id="lcol">
@@ -97,7 +97,7 @@
 	    <h2> Schwimmen im sauberen Seen </h2>
         <img src="../activities/swim.jpg" alt="Schwimmen im sauberen Seen"/>
         </a>
-    In Fussnähe befinden sich mehrere Bademöglichkeiten. Der näheste See, Isosimmi, ist etwa 200m entfernt. Mehrere Seen haben Sandstrand und können per Fahrrad (kostenlos) erreicht werden.
+    In Fussnähe befinden sich mehrere Bademöglichkeiten. Der näheste See, Iso–Simi, ist etwa 200m entfernt. Mehrere Seen haben Sandstrand und können per Fahrrad (kostenlos) erreicht werden.
   </div>
 </div>
 
@@ -108,7 +108,7 @@
 	    <h2> Sparziergang im Naturschutzgebiet. </h2>
         <img src="../activities/forest.jpg" alt="Sparziergang im Naturschutzgebiet."/>
         </a>
-    Das Natrschutzgebiet um den Isosimmmi See fängt eine hundert Meter von unserem Haus entfernt an und ersteckt sich über mehrere Kilometer. Grössere Excursionen können per Fahrrad unternommen werden die kostenlos von Villa Taika geliehen werden können.
+    Das Natrschutzgebiet um den Isosimi See fängt eine hundert Meter von unserem Haus entfernt an und ersteckt sich über mehrere Kilometer. Grössere Excursionen können unternommen werden per Fahrrad, die kostenlos von Villa Taika geliehen werden können.
   </div>
 </div>
 <div class='line'> &nbsp;</div>
@@ -130,18 +130,18 @@
 	    <h2> Enspannen und Ruhe </h2>
         <img src="../activities/garden.jpg" alt="Enspannen und Ruhe"/>
         </a>
-    Wir haben einen grossen und mit Liebe angelegten Garten der zum Entspannen einläd. Mehrer Sitzgelegenheiten laden ein, und das geplätscher des Wasserfalls lullt und entspannt.
+    Wir haben einen grossen und mit Liebe angelegten Garten der zum Entspannen einlädt. Mehrere Sitzgelegenheiten laden ein, und das geplätscher des Wasserfalls lullt und entspannt.
   </div>
 </div>
 <div class='line'> &nbsp;</div>
 
 <div class="activitybox">
   <div class="boxinner">
-      <a href="../activities/large/fiskars.jpg" rel="lightbox[activity]" title="Fiskars &amp; Bilnas Dörfer">
-	    <h2> Fiskars &amp; Bilnas Dörfer </h2>
-        <img src="../activities/fiskars.jpg" alt="Fiskars &amp; Bilnas Dörfer"/>
+      <a href="../activities/large/fiskars.jpg" rel="lightbox[activity]" title="Fiskars &amp; Billnäs Dörfer">
+	    <h2> Fiskars &amp; Billnäs Dörfer </h2>
+        <img src="../activities/fiskars.jpg" alt="Fiskars &amp; Billnäs Dörfer"/>
         </a>
-    Das liebevoll restaurierten Handwerks- zentrum Fiskars ist nur eine kurze Fahrt entfernt, und bietet lokales Handwerk zum Kauf, und mehrer Workshops sind zur Besichtigung offen. Bilnas ist ebenfalls eine altes Eisenwerk und befindet sich knapp über 10 Minuten entfernt.
+    Das liebevoll restaurierten Handwerks-zentrum Fiskars ist nur eine kurze Fahrt entfernt, und bietet lokales Handwerk zum Kauf, und mehrer Workshops sind zur Besichtigung offen. Billnäs ist ebenfalls eine altes Eisenwerk und befindet sich knapp über 10 Minuten entfernt.
   </div>
 </div>
 
@@ -163,18 +163,18 @@
 	    <h2> Raasepori und Mustio </h2>
         <img src="../activities/raasepori.jpg" alt="Raasepori und Mustio"/>
         </a>
-    Das alte Schloss von Raasepori, eines der ältesten in Finnland, giebt der Region den Namen und befindet sich nur etwa eine halbe Sunde entfent. Das alte Herrenhaus in Mustio ist auch sehr nah und lädt mit seinen grossen Gärten zum weilen ein.
+    Das alte Schloss von Raasepori, eines der ältesten in Finnland, gibt der Region den Namen und befindet sich nur etwa eine halbe Stunde entfent. Das alte Herrenhaus in Mustio ist auch sehr nah und lädt mit seinen grossen Gärten zum weilen ein.
   </div>
 </div>
 
 
 <div class="activitybox">
   <div class="boxinner">
-      <a href="../activities/large/groups.jpg" rel="lightbox[activity]" title="Gruppenaktivitäten.">
-	    <h2> Gruppenaktivitäten. </h2>
-        <img src="../activities/groups.jpg" alt="Gruppenaktivitäten."/>
+      <a href="../activities/large/groups.jpg" rel="lightbox[activity]" title="Gruppenaktivitäten">
+	    <h2> Gruppenaktivitäten </h2>
+        <img src="../activities/groups.jpg" alt="Gruppenaktivitäten"/>
         </a>
-    Unser <a href="http://www.kdadventure.com/fi/activities/kursseja/">Nachbar</a>, arrangiert für Gruppen eine Anzahl von Aktivitäten. Zum Beispiel Kanutrips, Kohlenlaufen, Themenabende und Wilderniskurse.
+    Unser <a href="http://www.kdadventure.com/fi/activities/kursseja/">Nachbar</a> arrangiert für Gruppen eine Anzahl von Aktivitäten. Zum Beispiel Kanutrips, Kohlenlaufen, Themenabende und Wilderniskurse.
   </div>
 </div>
 <div class='line'> &nbsp;</div>
