--- a/villataika.fi/de/bed.html
+++ b/villataika.fi/de/bed.html
@@ -12,7 +12,7 @@
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
   <meta name="keywords" content="Bed and breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed and Breakfast Villa Taika : Asatische Eleganz Bed &amp; Breakfast" />
+  <meta name="description" content="Bed and Breakfast Villa Taika : Asiatische Eleganz Bed &amp; Breakfast" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="de"/>  
   <title>Bed &amp; Breakfast Villa Taika : Bed &amp; Breakfast</title>
@@ -27,7 +27,7 @@
       <div class="centre">
         <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
       </div>
-      <div id="slogan">Asatische Eleganz</div>
+      <div id="slogan">Asiatische Eleganz</div>
   </div>
 
   <div id="lcol">
@@ -93,7 +93,7 @@
       <div class="wide_bedbox">
   <div class="bedbox">
       Willkommen in der charmanten Atmosphäre der Villa Taika! <br/><br/> Inspiriert von unseren Reisen in den Orient, brachten wir die Schönheit und Magie mit uns und haben so unser einzigartiges B&B mit 8 individuell eingerichteten Zimmern kreiert. <br/> Wir hoffen Sie werden neu belebt und gut geruht durch unsere wunderschöne Umgebung!<br/>
-In der Nähe sind mehrere Sehenswürdigkeiten, so kann man leicht den Tag in Fiskars (5km), Bilnäs (15km), Musto (15km), Tammisaari (35km) oder Hanko (65km) verbringen. Oder enspannen Sie sich einfach im liebevoll angelegten Gartem zum Pläzschern des Wasserfalles. <br/>
+In der Nähe sind mehrere Sehenswürdigkeiten, so kann man leicht den Tag in Fiskars (5km), Billnäs (15km), Mustio (15km), Tammisaari (35km) oder Hanko (65km) verbringen. Oder enspannen Sie sich einfach im liebevoll angelegten Garten zum Plätschern des Wasserfalles. <br/>
   </div>
 </div>
 
@@ -106,7 +106,7 @@ In der Nähe sind mehrere Sehenswürdigkeiten, so kann man leicht den Tag in Fis
           alt=Suites (ensuite)  
           height="187px"  width="250px" />
 </a>    <br/>
-    3 suites mit Dusche und Toilette 85-95 €
+    3 suites mit Dusche und Toilette 85–95 €
   </div>
   <div class="smallbox">
     <a href="deluxe.html">
@@ -130,7 +130,7 @@ In der Nähe sind mehrere Sehenswürdigkeiten, so kann man leicht den Tag in Fis
 <br/>
 <div class="wide_bedbox">
   <div class="bedbox">
-      Die Preise für ein Doppelzimmer sind zwischen 75 and 95€ für 2 Personen, aber mehrere Zimmer sind geräumig genug für ein drittes oder sogar viertes Bett (25€). <br/> Frühstück , zwischen 8:30-10:00, ist im Preis inbegriffen. <br/> Check-in ist zwischen 14:00 - 19:00 und Check-out bis 12:00 wenn nicht anders vereinbart.  <br/>
+      Die Preise für ein Doppelzimmer sind zwischen 75 and 95€ für 2 Personen, aber mehrere Zimmer sind geräumig genug für ein drittes oder sogar viertes Bett (25€). <br/> Frühstück, zwischen 8:30–10:00, ist im Preis inbegriffen. <br/> Check-in ist zwischen 14:00–19:00 und Check-out bis 12:00 wenn nicht anders vereinbart.  <br/>
   </div>
   
 </div>
