--- a/villataika.fi/de/deluxe.html
+++ b/villataika.fi/de/deluxe.html
@@ -12,7 +12,7 @@
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
   <meta name="keywords" content="Bed and breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed and Breakfast Villa Taika : Asatische Eleganz Deluxe (mit Toilette)" />
+  <meta name="description" content="Bed and Breakfast Villa Taika : Asiatische Eleganz Deluxe (mit Toilette)" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="de"/>  
   <title>Bed &amp; Breakfast Villa Taika : Deluxe (mit Toilette)</title>
@@ -27,7 +27,7 @@
       <div class="centre">
         <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
       </div>
-      <div id="slogan">Asatische Eleganz</div>
+      <div id="slogan">Asiatische Eleganz</div>
   </div>
 
   <div id="lcol">
@@ -98,7 +98,7 @@
         </a>
       </div>
       <h2> Grünes Zimmer </h2>
-      Das <b>Grüne Zimmer</b> hat eine ruhige Atmsphere und einen schönen Blick auf den Garten <br/> Zusätzlich zu dem vorhanden Doppelbett ist Platzt für eine Extra-Bett. Hinter den Dachwinkel passen auch zwei Kinder die das "höhlengeühl" lieben.<br/> Im Zimmer ist eine Toilette und eine Dusche wird mit dem Orangen Zimmer gemeinsam benutzt. <br/> Grünes und Organges Zimmer zusammen sind ideal für Kleingruppen bis 7 Erwachsene, da Sie dann den kleinen Vorraum und Dusche für sich haben. <br/> Der Preis für 2 ist 75€ / Einzelbelegung 60€
+      Das <b>Grüne Zimmer</b> hat eine ruhige Atmsphere und einen schönen Blick auf den Garten <br/> Zusätzlich zu dem vorhanden Doppelbett ist Platzt für eine Extra-Bett. Hinter den Dachwinkel passen auch zwei Kinder die das "höhlengefühl" lieben.<br/> Im Zimmer ist eine Toilette und eine Dusche wird mit dem Orangen Zimmer gemeinsam benutzt. <br/> Grünes und Oranges Zimmer zusammen sind ideal für Kleingruppen bis 7 Erwachsene, da Sie dann den kleinen Vorraum und Dusche für sich haben. <br/> Der Preis für 2 ist 75€ / Einzelbelegung 60€
     </div>
   </div>
   <div class="box">
@@ -109,7 +109,7 @@
         </a>
       </div>
       <h2> Oranges Zimmer </h2>
-      Das Orange Zimmer hat eine warme, gemütliche Atmosphäre mit asiatischem Touch. Zusätzlich zu dem vorhanden Doppelbett ist Platzt für eine Extra-Bett. Hinter den Dachwinkel passen auch zwei Kinder die das "höhlengeühl" lieben.<br/> Das Zimmer hat aus dem ersten Stock einen schönen Blick auf den Garten und umliegende Natur. Im Zimmer ist eine Toilette und eine Dusche wird mit dem grünen Zimmer gemeinsam benutzt. <br> Grünes und Organges Zimmer zusammen sind ideal für Kleingruppen bis 7 Erwachsene, da Sie dann den kleinen Vorraum und Dusche für sich haben. <br/> Der Preis für 2 ist 75€ / Einzelbelegung 60€
+      Das <b>Orange Zimmer</b> hat eine warme, gemütliche Atmosphäre mit asiatischem Touch. Zusätzlich zu dem vorhanden Doppelbett ist Platzt für eine Extra-Bett. Hinter den Dachwinkel passen auch zwei Kinder die das "höhlengefühl" lieben.<br/> Das Zimmer hat aus dem ersten Stock einen schönen Blick auf den Garten und umliegende Natur. Im Zimmer ist eine Toilette und eine Dusche wird mit dem grünen Zimmer gemeinsam benutzt. <br> Grünes und Organges Zimmer zusammen sind ideal für Kleingruppen bis 7 Erwachsene, da Sie dann den kleinen Vorraum und Dusche für sich haben. <br/> Der Preis für 2 ist 75€ / Einzelbelegung 60€
     </div>
   </div>
 
