--- a/villataika.fi/de/groups.html
+++ b/villataika.fi/de/groups.html
@@ -12,7 +12,7 @@
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
   <meta name="keywords" content="Bed and breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed and Breakfast Villa Taika : Asatische Eleganz Gruppen" />
+  <meta name="description" content="Bed and Breakfast Villa Taika : Asiatische Eleganz Gruppen" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="de"/>  
   <title>Bed &amp; Breakfast Villa Taika : Gruppen</title>
@@ -27,7 +27,7 @@
       <div class="centre">
         <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
       </div>
-      <div id="slogan">Asatische Eleganz</div>
+      <div id="slogan">Asiatische Eleganz</div>
   </div>
 
   <div id="lcol">
@@ -106,17 +106,16 @@
   <br/>
   Unser Saal ist auf schöne Weise eingerichtet und gross genug für viele Aktivitäten, zb Yoga, Tanzen,
 Körperarbeit oder andere Gruppenarbeit. <br/>
-Der  Garten ist gross und offen und eignet sich gut für ruihge Aktivitäten wir Yoga oder Meditation, 
+Der Garten ist gross und offen. Er eignet sich gut für ruhige Aktivitäten wie Yoga oder Meditation, 
 und bietet auch genug Sitzmöglichkeiten (auch bedacht) für Gruppen. <br/>
 Der Saal ist ausgerüstet mit einem hochqualitativen Audio System, und auch ein Videoprojektor ist 
 vorhanden. <br/>
 Für ruhige Arbeit oder Pausen stehen Decken und Kissen zur Verfügung. <br/>
 Die Sauna ist auch für grösserer Gruppen geeignet und zum abkühlen haben wir einen kleinen Pool. <br/>
 In den 8 Zimmern können bequem 20 und mit Extra-Betten bis zu 30 Personen übernachten.<br/>
-Zusätzlich zu den lokalen Resaurants bieten wir auch vegetarisches Essem im Haus an. <br/>
+Zusätzlich zu den lokalen Restaurants bieten wir auch vegetarisches Essem im Haus an. <br/>
 Preise sind von vielen Faktoren abhängig, bitte setzen Sie sich mit uns in Verbindung um ein geeignetes
-Paket zu schnüren. Speziell abhängig von Gruppengrösse, Jahreszeit und Mahlzeiten sind Peise zwischen 50 
-bis 65 pro Person und Tag für Vollpension mit Saalbenutzung üblich. <br/> <br/>
+Paket zu schnüren. Speziell abhängig von Gruppengrösse, Jahreszeit und Mahlzeiten sind Preise zwischen 50 bis 65 pro Person und Tag für Vollpension mit Saalbenutzung üblich. <br/> <br/>
 </div>
 
 
