--- a/villataika.fi/de/map.html
+++ b/villataika.fi/de/map.html
@@ -12,7 +12,7 @@
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
   <meta name="keywords" content="Bed and breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed and Breakfast Villa Taika : Asatische Eleganz Karte" />
+  <meta name="description" content="Bed and Breakfast Villa Taika : Asiatische Eleganz Karte" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="de"/>  
   <title>Bed &amp; Breakfast Villa Taika : Karte</title>
@@ -27,7 +27,7 @@
       <div class="centre">
         <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
       </div>
-      <div id="slogan">Asatische Eleganz</div>
+      <div id="slogan">Asiatische Eleganz</div>
   </div>
 
   <div id="lcol">
@@ -97,7 +97,7 @@
 <b>Villa Taika</b>  befindet sich in dem Dorf Antskog, 4km nördlich von Fiskars, ca 100km west von Helsinki.
 <br/>
 <br/>
-Villa Taika ist ein grosses weisses Haus auf einem kleinen Hügel, direkt an der Stasse durch Antskog.
+Villa Taika ist ein grosses weisses Haus auf einem kleinen Hügel, direkt an der Strasse durch Antskog.
 <br/>
 <br/>
 Von Fiskars kommend ist Villa Taika das <em>dritte</em> Haus auf der rechten Seite.
