--- a/villataika.fi/de/standard.html
+++ b/villataika.fi/de/standard.html
@@ -12,7 +12,7 @@
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
   <meta name="keywords" content="Bed and breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed and Breakfast Villa Taika : Asatische Eleganz Standard" />
+  <meta name="description" content="Bed and Breakfast Villa Taika : Asiatische Eleganz Standard" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="de"/>  
   <title>Bed &amp; Breakfast Villa Taika : Standard</title>
@@ -27,7 +27,7 @@
       <div class="centre">
         <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
       </div>
-      <div id="slogan">Asatische Eleganz</div>
+      <div id="slogan">Asiatische Eleganz</div>
   </div>
 
   <div id="lcol">
@@ -98,7 +98,7 @@
         </a>
       </div>
       <h2> Rosenzimmer </h2>
-      Das <b>Rosenzimmer </b> ist ein gemütliches Zimmer mit romantischer Atmosphäre. <br/> Es verfügt über ein Doppelbett und ein gemütliches Sofa für zwei Personen. <br/> Die Dusche und Toilette befinden sich direkt nebenann und werden mit dem Blauen Zimmer geteilt. <br/> Die benachbarten Rosen- und Blauen-zimmer bieten zusammen eine gute Einheit für kleine Gruppen oder grosse Familien.<br/> Der Preis für 2 ist 75€ / Einzelbelegung 60€
+      Das <b>Rosenzimmer </b> ist ein gemütliches Zimmer mit romantischer Atmosphäre. <br/> Es verfügt über ein Doppelbett und ein gemütliches Sofa für zwei Personen. <br/> Die Dusche und Toilette befinden sich direkt nebenann und werden mit dem Blauen Zimmer geteilt. <br/> Die benachbarten Rosen- und Blauen Zimmer bieten zusammen eine gute Einheit für kleine Gruppen oder grosse Familien.<br/> Der Preis für 2 ist 75€ / Einzelbelegung 60€
     </div>
   </div>
   <div class="box">
@@ -109,7 +109,7 @@
         </a>
       </div>
       <h2> Blaues Zimmer </h2>
-      Das <b>Blaues Zimmer </b> hat eine ruhige, entspannende Atmosphäre. <br/> Es teilt Dusche und Bad mit dem Rosenzimmer nebeann. Es befindet sich ein Doppelbett im Zimmer und es ist ein Extrabett vorhanden.  <br/> Die benachbarten Rosen- und Blauen-zimmer bieten zusammen eine gute Einheit für kleine Gruppen oder grosse Familien.<br/> Der Preis für 2 ist 75€ / Einzelbelegung 60€
+      Das <b>Blaue Zimmer </b> hat eine ruhige, entspannende Atmosphäre. <br/> Es teilt Dusche und Bad mit dem Rosenzimmer nebenan. Es befindet sich ein Doppelbett im Zimmer und es ist ein Extrabett vorhanden.  <br/> Die benachbarten Rosen- und Blauen Zimmer bieten zusammen eine gute Einheit für kleine Gruppen oder grosse Familien.<br/> Der Preis für 2 ist 75€ / Einzelbelegung 60€
     </div>
   </div>
 
