--- a/villataika.fi/de/suites.html
+++ b/villataika.fi/de/suites.html
@@ -12,7 +12,7 @@
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
   <meta name="keywords" content="Bed and breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed and Breakfast Villa Taika : Asatische Eleganz Suites (ensuite)" />
+  <meta name="description" content="Bed and Breakfast Villa Taika : Asiatische Eleganz Suites (ensuite)" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="de"/>  
   <title>Bed &amp; Breakfast Villa Taika : Suites (ensuite)</title>
@@ -27,7 +27,7 @@
       <div class="centre">
         <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
       </div>
-      <div id="slogan">Asatische Eleganz</div>
+      <div id="slogan">Asiatische Eleganz</div>
   </div>
 
   <div id="lcol">
@@ -98,7 +98,7 @@
         </a>
       </div>
       <h2> Lotus Suite </h2>
-      Die <b>Lotus Suite</b> ist ein sehr geräumigiges Zimmer, eher Appartement, mit asiatischer Eleganz.<br/> Zusätzlich zum eigenen Badezimmer, Schlaf- und Vorraum, bietet Sie genug Platz für zwei Betten und dabei noch genug Platz zum Sizen. Ausserdem ist eine <b> private Terasse </b> angeschlossen, auf der sich auch im Herbst noch die Morgensoonne geniessen lässt.<br/> Der Preis für 2 ist 95€.
+      Die <b>Lotus Suite</b> ist ein sehr geräumigiges Zimmer, eher Appartement, mit asiatischer Eleganz.<br/> Zusätzlich zum eigenen Badezimmer, Schlaf- und Vorraum, bietet Sie genug Platz für zwei Betten und dabei noch genug Platz zum Sizen. Ausserdem ist eine <b> private Terasse </b> angeschlossen, auf der sich auch im Herbst noch die Morgensonne geniessen lässt.<br/> Der Preis für 2 ist 95€.
     </div>
   </div>
   <div class="box">
@@ -109,18 +109,18 @@
         </a>
       </div>
       <h2> Sonnen Suite </h2>
-      Die <b>Sonnen Suite</b> ist ein sehr elegantes und sonniges Zimmer. <br/> Traditonelles englisches timber-framing giebt dem Raum einen rusikalen Hauch der die elegante Atmosphäre mit Teakmöbeln kontrapunktiert.<br/> Die grossen süd-gerichteten Fenster und hohe Decke verleihen dem Zimmer ein leichtes, sonniges Gefühl.<br/> Dusche und Toilette sind ensuite und zusätlich zum Doppelbett ist Platz für ein Extra-Bett.<br/> Der Preis für 2 ist 90€ / Einzelbelegung 75€
+      Die <b>Sonnen Suite</b> ist ein sehr elegantes und sonniges Zimmer. <br/> Traditonelles englisches timber-framing gibt dem Raum einen rusikalen Hauch der die elegante Atmosphäre mit Teakmöbeln kontrapunktiert.<br/> Die grossen süd-gerichteten Fenster und hohe Decke verleihen dem Zimmer ein leichtes, sonniges Gefühl.<br/> Dusche und Toilette sind ensuite und zusätlich zum Doppelbett ist Platz für ein Extra-Bett.<br/> Der Preis für 2 ist 90€ / Einzelbelegung 75€
     </div>
   </div>
   <div class="box">
     <div class="boxinner">
       <div class="captionedimage">
-        <a href="../images/ametist.jpg" rel="lightbox[suites]" title="Amethyst room">
+        <a href="../images/ametist.jpg" rel="lightbox[suites]" title="Amethyst Zimmer">
           <img src="../images/ametist_small.jpg" />
         </a>
       </div>
-      <h2> Amethyst room </h2>
-      Das <b>Amethyst Zimmer</b> ist ein sonnig, helles Zimmer mit hand geschnitztem Relief. <br/> Das Zimmer ist nach Süden gerichtet und durch die grossen Fenster entsteht eine sehr geraümges Gefühl.<br/> Eine eigene Dusche und Toilette befindet geht direkt von der eigenen kleinen Eingangshalle ab. <br/> Der Preis für 2 ist 85€ / Einzelbelegung 70€
+      <h2> Amethyst Zimmer </h2>
+      Das <b>Amethyst Zimmer</b> ist ein sonnig, helles Zimmer mit hand geschnitztem Relief. <br/> Das Zimmer ist nach Süden gerichtet und durch die grossen Fenster entsteht eine sehr geraümiges Gefühl.<br/> Eine eigene Dusche und Toilette geht direkt von der eigenen kleinen Eingangshalle ab. <br/> Der Preis für 2 ist 85€ / Einzelbelegung 70€
     </div>
   </div>
 
