--- a/villataika.fi/de/index.html
+++ b/villataika.fi/de/index.html
@@ -12,7 +12,7 @@
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
   <meta name="keywords" content="Bed and breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed and Breakfast Villa Taika : Asatische Eleganz Home" />
+  <meta name="description" content="Bed and Breakfast Villa Taika : Asiatische Eleganz Home" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="de"/>  
   <title>Bed &amp; Breakfast Villa Taika : Home</title>
@@ -27,7 +27,7 @@
       <div class="centre">
         <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
       </div>
-      <div id="slogan">Asatische Eleganz</div>
+      <div id="slogan">Asiatische Eleganz</div>
   </div>
 
   <div id="lcol">
@@ -114,7 +114,7 @@
   </div>
 
   <div id="maintext">
-    Asiatische Eleganz inmiten unberührter Natur.
+    Asiatische Eleganz inmitten unberührter Natur.
 
   </div>
   <div class="subtext">
