--- a/villataika.fi/de/news.html
+++ b/villataika.fi/de/news.html
@@ -12,7 +12,7 @@
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
   <meta name="keywords" content="Bed and breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed and Breakfast Villa Taika : Asatische Eleganz Neues" />
+  <meta name="description" content="Bed and Breakfast Villa Taika : Asiatische Eleganz Neues" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="de"/>  
   <title>Bed &amp; Breakfast Villa Taika : Neues</title>
@@ -27,7 +27,7 @@
       <div class="centre">
         <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
       </div>
-      <div id="slogan">Asatische Eleganz</div>
+      <div id="slogan">Asiatische Eleganz</div>
   </div>
 
   <div id="lcol">
@@ -98,18 +98,18 @@
         </a>
       </div>
     <h2> Rustikale Unterkunft im renovierten Blockhaus </h2>
-    Wir haben Teil des Hofgebebäudes renoviert und ein schönes Blockhaus - Zimmer mit Himmelbett ausgestattet. Das einfache aber bezaubernde Zimmer kostet 65€ für zwei Personen. <br/> Toilette und Dusche befinden sich im Hautgebäude.
+    Wir haben Teil des Hofgebebäudes renoviert und ein schönes Blockhaus-Zimmer mit Himmelbett ausgestattet. Das einfache aber bezaubernde Zimmer kostet 65€ für zwei Personen. <br/> Toilette und Dusche befinden sich im Hauptgebäude.
   </div>
 </div>
 <div class='line'> &nbsp;</div>
 <div class="newsbox">
   <div class="boxinner">
       <div class="captionedimage">
-        <a href="../news/large/renewable.jpg" rel="lightbox" title="Ököenergie.">
+        <a href="../news/large/renewable.jpg" rel="lightbox" title="Ököenergie">
           <img src="../news/renewable.jpg" height=100>
         </a>
       </div>
-    <h2> Ököenergie. </h2>
+    <h2> Ököenergie </h2>
     Villa Taika ist jetzt komplett auf erneuerbare Energie umgestiegen <br/> Zusätlich zu dem schon vor einigen Jahren installiertem Wasserführendem Kamin, haben wir eine neuen Holzkessel installiert. Der moderne Holzvergaser glänzt mit einem Wirkungsgrad von bis zu 91%. <br/> Zusätzlich ist eine neue Wärmepumpe mit einem cop Wert von 5,6 zum Energiemix dazugekommen. Aber auch die elektrische Energie ist 100% erneuerbar, dank der Firma Kraft and Kultur.
   </div>
 </div>
